Revision history for SPVM
0.9602_01  2022-06-06
        [CHANGE]
        * Add --no-pm-file option to spvmdist command
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Rename SPVM::Builder::Generator::Dist to SPVM::Dist.
0.9601_01  2022-06-06
        [CHANGE]
        * Improve compilation error messages.
        * add "spvmdist" command.
          
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove "spvmgenlib" command. The important fetures are merged into "spvmdist"
          [Before]
          spvmgenlib --module-dir t/default/lib/SPVM TestCase::CompileError::Foo
          [After]
          spvmdist -f --only-lib-files TestCase::CompileError::Foo t/default/lib

0.9601  2022-06-01
        [CHANGE]
        * Regex class support "i" (ignore case) option.
        * Logical operator can be used as operands.
          
          my $ret = !1;
          my $ret = 1 && 1;
          my $ret = 1 || 1;
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Change ByteList->new method definition
          [Before]
          static method new : ByteList ($array : byte[])
          [After]
          static method new : ByteList ($array : byte[]...)
        * Change DoubleList->new method definition
          [Before]
          static method new : DoubleList ($array : double[])
          [After]
          static method new : DoubleList ($array : double[]...)
        * Change FloatList->new method definition
          [Before]
          static method new : FloatList ($array : float[])
          [After]
          static method new : FloatList ($array : float[]...)
        * Change Hash->new method definition
          [Before]
          static method new : Hash ($key_values : object[])
          [After]
          static method new : Hash ($key_values : object[]...)
        * Change IntList->new method definition
          [Before]
          static method new : IntList ($array : int[])
          [After]