@@ -489,6 +489,11 @@ my $nan_re = qr/(nan|ind)/i;
   ok(SPVM::TestCase::Lib::Fn1->replace);
 }
 
+# is_hex_digit
+{
+  ok(SPVM::TestCase::Lib::Fn3->is_hex_digit);
+}
+
 # All object is freed
 my $end_memory_blocks_count = SPVM::get_memory_blocks_count();
 is($end_memory_blocks_count, $start_memory_blocks_count);
